<resources>
    <string name="app_name">PlacesFinder</string>
    <string name="activity_main_bottom_navigation_view_places">Places</string>
    <string name="activity_main_bottom_navigation_view_favourites">Favourites</string>
    <string name="dialog__error_title">Ups</string>
    <string name="dialog__error_message">Something went wrong</string>
    <string name="dialog__retry">Retry</string>
    <string name="settings__place_type_label">Place Type</string>
    <string name="settings__place_radius_label">Radius</string>
    <string name="settings__filter_type_museum">Museum</string>
    <string name="settings__filter_type_parking">Parking</string>
    <string name="settings__filter_type_restaurant">Restaurant</string>
    <string name="loading">Loading...</string>
</resources>
